[gd_scene load_steps=22 format=3 uid="uid://buaexi66xho3d"]

[ext_resource type="Script" path="res://player_related/script_chara_bob.gd" id="1_g2n5w"]
[ext_resource type="Texture2D" uid="uid://14c0te3jbrln" path="res://sprite/tex_dust_bob.png" id="2_2cgoh"]
[ext_resource type="Texture2D" uid="uid://cm0y67224xlny" path="res://player_related/tex_bob.png" id="2_qnqj6"]
[ext_resource type="Shader" path="res://player_related/shader_reflect.gdshader" id="3_stmxl"]
[ext_resource type="AudioStream" uid="uid://b3v38xi3socwa" path="res://player_related/footstep.wav" id="4_kb321"]
[ext_resource type="Script" path="res://player_related/script_sprite_anim.gd" id="6_tyss7"]

[sub_resource type="Curve" id="Curve_4nxcd"]
_data = [Vector2(0.0275, 0.838432), 0.0, 0.0, 0, 0, Vector2(0.9325, 0.0616635), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_omfbr"]
curve = SubResource("Curve_4nxcd")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_300sh"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(0, 1, 1)
angle_min = -720.0
angle_max = 720.0
spread = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_omfbr")
turbulence_noise_scale = 3.318

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7ehji"]
shader = ExtResource("3_stmxl")
shader_parameter/waveAmplitude = 0.01
shader_parameter/correctVertex = true
shader_parameter/waveFrequency = 100.0
shader_parameter/verticalWave = false
shader_parameter/keepTransparency = true
shader_parameter/useTime = true
shader_parameter/waveSpeed = 10.0
shader_parameter/progress = 0.0
shader_parameter/firstHalf = 1.0
shader_parameter/secondHalf = 1.0
shader_parameter/freezeFirstHalf = false
shader_parameter/freezeSecondHalf = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6o5yt"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_3kv6y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio/footstep:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_xtcb4"]
resource_name = "climb rope"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0), Vector2i(10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_23jtj"]
resource_name = "danse"
length = 1.5
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(0, 0), Vector2i(2, 0), Vector2i(0, 0), Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3), Vector2i(2, 4), Vector2i(2, 5), Vector2i(2, 6), Vector2i(2, 7), Vector2i(2, 0), Vector2i(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_sr8i6"]
resource_name = "idle"
length = 0.1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bur3c"]
resource_name = "idle rope"
length = 0.1
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GPUParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fumo4"]
resource_name = "push_walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(14, 0), Vector2i(13, 0), Vector2i(15, 0), Vector2i(13, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio/footstep:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("GPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0tlxl"]
resource_name = "run"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(4, 0), Vector2i(3, 0), Vector2i(5, 0), Vector2i(3, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"start_battle"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio/footstep:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vmjh8"]
resource_name = "walk"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite_bob_preview:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(0, 0), Vector2i(2, 0), Vector2i(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"start_battle"
}, {
"args": [],
"method": &"start_battle"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio/footstep:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("GPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3q14"]
_data = {
"RESET": SubResource("Animation_3kv6y"),
"climb rope": SubResource("Animation_xtcb4"),
"danse": SubResource("Animation_23jtj"),
"idle": SubResource("Animation_sr8i6"),
"idle rope": SubResource("Animation_bur3c"),
"push_walk": SubResource("Animation_fumo4"),
"run": SubResource("Animation_0tlxl"),
"walk": SubResource("Animation_vmjh8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ubcv"]
size = Vector2(8, 8)

[node name="chara_bob" type="CharacterBody2D"]
y_sort_enabled = true
motion_mode = 1
floor_snap_length = 0.0
script = ExtResource("1_g2n5w")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
process_mode = 3
z_index = 1
position = Vector2(0, 3)
amount = 16
process_material = SubResource("ParticleProcessMaterial_300sh")
texture = ExtResource("2_2cgoh")

[node name="sprite_bob" type="Sprite2D" parent="."]
process_mode = 3
visible = false
z_index = 2
y_sort_enabled = true
texture = ExtResource("2_qnqj6")
offset = Vector2(0, -8)
hframes = 16
vframes = 8

[node name="sprite_bob_reflect" type="Sprite2D" parent="."]
visible = false
z_index = -1
material = SubResource("ShaderMaterial_7ehji")
position = Vector2(0, 32)
texture = ExtResource("2_qnqj6")
offset = Vector2(0, -8)
flip_v = true
hframes = 16
vframes = 8

[node name="sprite_bob_preview" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_qnqj6")
offset = Vector2(0, -8)
hframes = 16
vframes = 8

[node name="collision_bob" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_6o5yt")

[node name="camera_bob" type="Camera2D" parent="."]

[node name="animation_bob" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_m3q14")
}

[node name="area_interact" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 2
collision_mask = 2

[node name="collision_interact" type="CollisionShape2D" parent="area_interact"]
shape = SubResource("RectangleShape2D_8ubcv")
debug_color = Color(1, 0.6, 0.701961, 0.419608)

[node name="area_teleportation" type="Area2D" parent="."]
position = Vector2(0, 4)
collision_layer = 4
collision_mask = 4

[node name="collision_interact" type="CollisionShape2D" parent="area_teleportation"]
shape = SubResource("RectangleShape2D_8ubcv")
debug_color = Color(0, 1, 0.701961, 0.419608)

[node name="audio" type="AudioStreamPlayer2D" parent="."]

[node name="footstep" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("4_kb321")

[node name="sprite_anim" type="Node" parent="."]
process_mode = 3
script = ExtResource("6_tyss7")
